Bug 1672621 - Don't create new texture clients if our forwarder has gone away. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D94540